<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/stat1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/circle"
            android:textColor="#20ffffff" />
        
        <Button
            android:id="@+id/stat2"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/triangle"
            android:textColor="#20ffffff" />
        
        <Button
            android:id="@+id/stat3"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/square"
            android:textColor="#20ffffff" />
        
        <Button
            android:id="@+id/stat4"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/heart"
            android:textColor="#20ffffff" />
        
        <Button
            android:id="@+id/stat5"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/star"
            android:textColor="#20ffffff" />
        
        <Button
            android:id="@+id/stat6"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/diamond"
            android:textColor="#20ffffff" />
        
    </LinearLayout>
    
</LinearLayout>